--- a/.config/awesome/misc/picom/panthom.conf
+++ b/.config/awesome/misc/picom/panthom.conf
@@ -61,6 +61,7 @@ shadow-exclude = [
   "class_g = 'Cairo-clock'",
   "class_g = 'slop'",
   "class_g = 'Polybar'",
+  "class_g = 'Rofi'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
